# wf-pose-labelbox

./: .gitignore  README.md  justfile  pylintrc  pyproject.toml
MODULE_NAME/: __init__.py
pose_labelbox/: __init__.py  alphapose.py  core.py  ffmpeg.py  labelbox.py  overlay.py  utils.py
