[project]
name = "wf-project-name"
dynamic = ["version"]

[tool.poetry]
name = "wf-project-name"
version = "0.1.0"
description = ""
authors = ["NAME <EMAIL>"]
maintainers = ["NAME <EMAIL>"]
readme = "README.md"
keywords = []
repository = "<<GITHUB URL>>"
license = "MIT"
packages = [{include = "MODULE_NAME"}]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python"
]

[tool.poetry.dependencies]
python = "^3.8"
toml = "^0.10.2"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
pylint = "^2.15.0"
pytest = "^7.2.0"

[tool.black]
line-length = 120
target-version = ['py38']

[tool.setuptools]
py-modules = []

[build-system]
requires = ["poetry-core", "setuptools"]
build-backend = "poetry.core.masonry.api"
